infra/k8s/mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          # resources:
          #   limits:
          #     memory: 512Mi
          #     cpu: "1"
          #   requests:
          #     memory: 256Mi
          #     cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  selector:
    app: mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
