infra/k8s/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: akbar010202/products
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: products-srv
spec:
  selector:
    app: products
  ports:
    - name: products
      protocol: TCP
      port: 3000
      targetPort: 3000
