infra/k8s/review-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
        - name: review
          image: akbar010202/review
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: review-srv
spec:
  selector:
    app: review
  ports:
    - name: review
      protocol: TCP
      port: 3000
      targetPort: 3000
