infra/k8s/review-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-mongo
  template:
    metadata:
      labels:
        app: review-mongo
    spec:
      containers:
        - name: review-mongo
          image: mongo
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: review-mongo-srv
spec:
  selector:
    app: review-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
