infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: manzil.dev
      http:
        paths:
          - pathType: Prefix
            path: /api/users/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/posts/?(.*)
            backend:
              service:
                name: posts-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/reviews/?(.*)
            backend:
              service:
                name: posts-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
